# ModelActionProtocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/verifier/: next.config.ts  package.json  vercel.json
apps/verifier/app/: actions.ts  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/verifier/app/demo/: page.tsx
apps/verifier/components/: EmptyState.tsx  EntryCard.tsx  Footer.tsx  Header.tsx  ResultBanner.tsx  StateDiff.tsx  Timeline.tsx  Verifier.tsx  icons.tsx
apps/verifier/lib/: share-client.ts  verify.ts
apps/verifier/public/: sample-tampered.ledger.json  sample-valid.ledger.json
docs/: v0.1-plan.md
examples/tools-stripe/: index.ts
python/: .gitignore  DESIGN.md  README.md  pyproject.toml
python/examples/: quickstart.ipynb
python/examples/fastapi_app/: README.md  main.py
python/scripts/: generate_python_fixtures.py
python/src/map/: __init__.py  _map.py  _version.py  exceptions.py
python/src/map/core/: __init__.py  action.py  canonical.py  critic.py  ledger.py  reversal.py  snapshot.py
python/src/map/integrations/: __init__.py  anthropic.py
python/src/map/learning/: __init__.py  engine.py
python/src/map/stores/: __init__.py  memory.py  postgres.py  sqlite.py
python/src/map/tools/: __init__.py  decorators.py
python/tests/: test_conformance.py  test_learning.py  test_ledger.py  test_map.py  test_persistence.py  test_sdk_integration.py  test_sdk_integration_live.py  test_snapshot.py
python/tests/fixtures/python-generated/: compensate-reversal.json  corrected-mid-chain.json  edge-cases.json  flagged-with-reversal.json  pass-only-3-actions.json
scripts/: generate-fixtures.ts  generate-sample-ledger.mjs
spec/: SPEC.md
spec/fixtures/v0.1/: corrected-mid-chain.json  edge-cases.json  flagged-halt.json  learning-patterns.json  pass-only-3-actions.json  rollback-and-resume.json
src/: critic.ts  executor.ts  index.ts  learning.ts  ledger.ts  map.ts  protocol.ts  rollback.ts  snapshot.ts  store.ts  tool-builder.ts
src/__tests__/: conformance.test.ts  edge-cases.test.ts  map.test.ts  persistence.test.ts  python-output-conformance.test.ts
src/adapters/: sqlite.ts
